# todolist

./: .docker_env  .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  readme.md  requirements.txt
.github/workflows/: action.yaml
bot/: models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_username.py  0003_alter_tguser_user.py  0004_alter_tguser_username.py
bot/tg/: client.py  dc.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_auto_20221016_1301.py
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_auto_20221020_1926.py  0002_goal.py  0002_goal_is_deleted.py  0003_alter_goal_due_date.py  0003_comment.py  0004_alter_goal_category.py  0004_rename_comment_goalcomment.py  0005_alter_goal_category.py  0006_alter_goal_category.py  0007_auto_20221024_1720.py  0008_create_new_objects.py  0009_alter_goalcategory_board.py
tests/: base.py  conftest.py  factories.py  fixtures.py  simple_test.py
tests/core/: user_create_test.py  user_login_test.py  user_profile_test.py
tests/goals/: board_test.py  category_test.py  comment_test.py  goal_list_test.py  goal_retrieve_test.py  goal_test.py
todolist/: settings.py  urls.py
